@@ -55,6 +55,7 @@ NEWS
   * Ignore multiple "If-None-Match" headers (only use first one, fixes #753)
   * Add X-Sendfile-Range feature (fixes #2005)
   * Fix 100% cpu usage if time() < 0 (thx to gaspa and cate, fixes #1964)
+  * Allow max-keep-alive-requests to depend on conditional (fixes #1881)
 
 - 1.4.22 - 2009-03-07
   * Fix wrong lua type for CACHE_MISS/CACHE_HIT in mod_cml (fixes #533)
